--- a/style.css
+++ b/style.css
@@ -1,12 +1,59 @@
 *{
 	padding: 0;
 	margin:0;
-
+	box-sizing: border-box;
+	font-family: "Segoe UI Light", sans-serif;
 }
 
 .header{
 	width: 100%;
 	height: 100px;
-	border-bottom: 0.5px solid grey;
+	
 }
+.logo{
+	width: 1400px;
+	margin: 0 auto;
+}
+.content{
+	width: 1400px;
+	margin: 0 auto;
+}
+.gallery{
+	margin: 0 auto;
+	padding: 0;
+	list-style: none;
+	
+	
+}
+.gallery__link{
+	transition: box-shadow .3s linear;
+	display: inline-block;
+	border: 1px solid grey;
+	border-radius: 5px;
+	margin: 20px;
+	overflow: hidden;
+	padding: 10px;
+
+	}
+
+.gallery__item{
+
+	overflow: hidden;
+	display: block;
+	width: 200px;
+	width: 200px;
+
+}
+
+.gallery__link:hover{
+box-shadow: 0 0 10px 5px rgba(20, 20, 20, .5);
+}
+.gallery_item img{
+	transition: transform, box-shadow .3s, .3s linear;
+}
+
+.gallery__item img:hover{
+	transform: scale(1.2);
+}
+
 
